styles.css
.navbar {
    display: flex;
    text-decoration: none;
    list-style-type:none;
    width: 100%;
    justify-content: flex-end;
    padding-top: 1em;
    padding-bottom: 1em;
    background-color: black;
    color: whitesmoke;
    border-bottom: 1px solid whitesmoke;
    font-size: 1.5rem;
}

* {margin: 0px;}

.links {padding-right: 3em;
        text-decoration: none;
        color: rgb(220, 220, 220);}

#tagline {
        
         color: whitesmoke;
         margin: 0px;
         font-family:'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         font-size: 3em;
         min-width: 5em;
         width: 6.5em;
         /*flex: 1;*/
         /*padding-left: 2em;*/
      
         
         }

.banner {
    width:100%;
    height: min(35rem);
    background-color: rgb(0, 0, 0);
    display: flex;
    flex-wrap: wrap;
    flex-shrink: 1;
    align-items: center;
    justify-content: center;
    margin: 0px;
    border-bottom: 4px solid whitesmoke;
    gap: 25em;
}

#pfpic {
    
    width: min(25em);
    height:25em;
    background-color: rgb(220, 220, 220);
    border-radius: 100%;
    /*margin-right: 12em;*/ 
   
}
.gallery{
    background-color: rgb(37, 37, 37);
    color: rgb(220, 220, 220);
    font-family:'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-size: 1em;
    display:flex;
    justify-content: center;
    gap: 1em;
    flex-wrap: wrap;
    padding-bottom: 2em;
   
  
    }

.project{
    max-width: 42.5em;
    height: 22em;
    background-color: rgb(220, 220, 220);
    border-top-left-radius: 1%;
    border-top-right-radius: 1%;
    display: flex;
    flex-direction: column-reverse;
    
}

.label {
    background-color: brown;
    padding-top: 1rem;
    padding-bottom: 1rem;
    text-align: center;
    font-size: 1.5em;
    margin-bottom: 0px;
    border-bottom-left-radius: 1%;
    border-bottom-right-radius: 1%;
}

.textarea {
    font-size: 1.5em;
    background-color: rgb(37, 37, 37);
    color: rgb(220, 220, 220);
    font-family:'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    text-align: left;
    padding-left: 4em;
    
    
    
}
.text {
    max-width: 20em;
}

.footer {
     background-color: rgb(37, 37, 37);
     height: 20em;

}

/*remember to give specific id when using more headings*/

h1{
    background-color: rgb(37, 37, 37);
    margin: 0px;
    padding-left: 3em;
    color: rgb(220, 220, 220);
    padding-top: 3em;
    padding-bottom: 1em;
}

@media screen and (max-width:1250px) {

    .links {padding-right: 1em;}


    .banner {
    padding-top: 4em;
    flex-direction: column-reverse;
    justify-content: center;
    align-items: center;
    gap:5em;
    margin: 0px;
    width: 100%;
    text-align: center;
    padding-bottom: 2em;
}

    #pfpic{
        justify-self: center;
        margin: 0;
        width: 20em;
        height: 20em;
        }

    #tagline {
         color: whitesmoke;
         margin: 0px;
         font-family:'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         font-size: 2.5em;
         padding-left: 0em;
         
       
         
         }

    h1{padding-left: 1em;}
    .textarea{
        text-align: left;
        padding-left: 1em;
    }

    .project{
    width: 100%;
    height: 75%;
    
}
}

